--- a/html-sarahDrogies/index.html
+++ b/html-sarahDrogies/index.html
@@ -3,10 +3,11 @@
 
     <head>
         <title>HTML exercise 1</title>
+        <link rel="stylesheet" type="text/css" href="static/css/style.css" />
     </head>
 
     <body>
-<h1> My website </h1>
+<h1 class="center"> My website </h1>
 <p> For the computational background skills class I am creating a website!</p>
 <h3> This is a list of things we learned </h3>
 <ul>
@@ -19,7 +20,9 @@
 
 <p> These skills can be useful for Digital Humanities!</p>
 
+
 <h3> A table </h3>
+<div>
 <table>
   <tr>
     <th>Dates</th>
@@ -50,6 +53,7 @@
       <td>13.15-16.25</td>
     </tr>
 </table>
+</div>
 
 <p> I will also add a numbered list</p>
 
